# libnfs

./: .gitignore  configure.ac
include/: libnfs-private.h
include/nfsc/: libnfs-raw.h  libnfs.h  libnfs_pub.h
lib/: Makefile.am  init.c  libnfs-sync.c  libnfs-zdr.c  libnfs.c  nfs_v3.c  nfs_v4.c  pdu.c  socket.c
mount/: Makefile.am
nfs/: Makefile.am
nfs4/: Makefile.am
nlm/: Makefile.am
nsm/: Makefile.am
portmap/: Makefile.am
rquota/: Makefile.am
utils/: Makefile.am
